--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,6 +44,7 @@
 @import '_widget-calendar.scss';
 @import '_widget.scss';
 @import '_calendar.scss';
+@import 'card-calendar';
 @import '_article.scss';
 @import '_comment.scss';
 @import '_comment-dark.scss';
