--- a/sass/general/_variables.scss
+++ b/sass/general/_variables.scss
@@ -12,10 +12,11 @@ $thin-color:             #a1a3a7;
 $tooltip-bg:             #797c82;
 $tooltip-arrow-color:    $tooltip-bg;
 
-$error-color:            #FF4F4F;
-$valid-color:            #39b54a;
+$error-color:            #ee3124;
+$valid-color:            #008330;
+$warning-color:						#EE9800;
 
-$success-color:					 #39b54a;
+$success-color:					  #39b54a;
 
 // Текст
 $text-color: $basic-color;
