--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,11 +20,11 @@
 @import 'fonts/icon';
 
 // componets ----------------------------
-@import 'bootstrap/_tooltip.scss';
-@import 'bootstrap/_dropdown.scss';
-@import 'bootstrap/_transitions.scss';
-@import 'bootstrap/_nav.scss';
-@import 'bootstrap/_modal.scss';
+//@import 'bootstrap/_tooltip.scss';
+//@import 'bootstrap/_dropdown.scss';
+//@import 'bootstrap/_transitions.scss';
+//@import 'bootstrap/_nav.scss';
+//@import 'bootstrap/_modal.scss';
 
 // deafult style ------------------------
 @import 'general/_preloader.scss';
