--- a/sass/general/_form.scss
+++ b/sass/general/_form.scss
@@ -103,6 +103,14 @@
 				transform: rotate(-90deg);
 			}
 		}
+		&_select {
+			width: 100%;
+			select {
+				background-image: none;
+				margin: 10px 0 0;
+				width: 100%;
+			}
+		}
 	}
 	&-sender {
 		text-align: right;
@@ -148,6 +156,18 @@
 				text-indent: -500px; // анимация для placeholder
 			}
 		}
+		&.success {
+			border-color: $valid-color;
+		}
+		&.error {
+			border-color: $error-color;
+			color: $error-color;
+		}
+		&.warning {
+			border-color: $warning-color;
+			color: $warning-color;
+
+		}
 	}
 	&__textarea {
 		min-height: 210px;
@@ -161,23 +181,39 @@
 			max-width: 203px;
 		}
 		
+
+		
 	}
 
 
 	&-select {
+		position: relative;
 		padding-right: 20px;
-		background: transparent url(../img/icon/arrow-select.svg) 94% 52% no-repeat / 8px;
+		//background: transparent url(../img/icon/arrow-select.svg) 94% 52% no-repeat / 8px;
 		appearance: none !important;
 		text-indent: 0.01px; 
 		text-overflow: '';
 		&:-ms-expand {
   		display: none;
 		}
+
 		option {
 			padding-top: 3px;
 			padding-bottom: 3px;
 			line-height: 3;
 			// font-size: 14px;
+
+		}
+		&-multiple {
+			padding: 10px 0;
+			min-height: 92px;
+			option {
+				padding: 0 15px;
+				margin-bottom: 4px;
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
 		}
 	}
 
@@ -207,14 +243,14 @@
 			}
 		}
 	}
-	&-checkbox{
+	&-checkbox {
 		// float: left;
 		display: flex;
 		align-items: center;
 		&__label {
 			display: flex;
 			align-items: center;
-			height: 100%;
+			//height: 100%;
 		}
 	
 		&__input { // стилизуем checkbox
@@ -322,6 +358,76 @@
 				// padding-right: 10px;
 				margin-bottom: 5px;
 			}
+		}
+	}
+
+	&-radio {
+		// float: left;
+		display: flex;
+		align-items: center;
+		margin-bottom: 10px;
+		&__label {
+			display: flex;
+			align-items: center;
+			//height: 100%;
+		}
+
+		&__input { // стилизуем radio
+			position: absolute;
+			z-index: -1;
+			opacity: 0;
+
+
+			&:checked + .form-radio__text:after {
+				display: block;
+			}
+			&:checked + .form-radio__text:before {
+				background-color: #5e6167;
+			}
+
+			&:disabled + .form-radio__text {
+				opacity: 0.3;
+				cursor: not-allowed;
+			}
+		}
+
+
+		&__text {
+			display: inline-block;
+			position: relative;
+			padding: 0 0 0 22px;
+			color: $dark-color;
+			font-size: 14px;
+			font-weight: 300;
+			cursor: pointer;
+			@include hover {
+				font-weight: 700;
+			}
+
+			&:before {
+				content: '';
+				position: absolute;
+				top: 50%;
+				left: 0;
+				margin-top: -7.5px;
+				@include circle(15px);
+				background: #DDDDDD;
+				transition: 0.2s;
+			}
+
+
+			&:after {
+				content: '';
+				display: none;
+				position: absolute;
+				top: 50%;
+				left: 4px;
+				margin-top: -3.5px;
+				@include circle(7px);
+				background-color: $light-color;
+				transition: 0.2s;
+			}
+
 		}
 	}
 	&-setting {
