--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -189,6 +189,9 @@ $font-sizes: 8, 10, 12, 14, 17, 20, 22, 24, 28, 32, 40;
 		background-color: #EE9800 !important;
 	}
 }
+.color-icons-grey-1 {
+	color: #bdbec0;
+}
 
 .border-default {
 	border-radius: 5px !important;
