--- a/pug/stylegide.pug
+++ b/pug/stylegide.pug
@@ -30,6 +30,7 @@ html(lang='ru')
 			include stylegide/_stylegide__forms
 			include stylegide/_stylegide__text
 			include stylegide/_stylegide__tables
+			include stylegide/_stylegide__icons
 
 		footer.footer(style="padding: 1000px 0")
 			.upp
